feat(docs): 添加VitePress配置及NaiveUI集成
添加VitePress文档站点基础配置，包括主题定制、NaiveUI集成和SSR样式处理。新增.gitignore规则忽略缓存文件，并设置必要的依赖包。

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
+    "@css-render/vue3-ssr": "^0.15.14",
     "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.42.0",
