--- a/package.json
+++ b/package.json
@@ -17,21 +17,24 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
     "@css-render/vue3-ssr": "^0.15.14",
+    "@types/node": "^24.0.3",
+    "@vitejs/plugin-vue": "^6.0.0",
     "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.42.0",
     "oxlint": "^1.3.0",
     "prettier": "^3.5.3",
+    "sass": "^1.89.2",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^2.1.0",
     "vitepress": "^1.6.3",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@types/node": "^24.0.3",
     "@vueuse/core": "^13.4.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17"
