--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext .vue,.js,.ts --fix",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage",
+    "lint": "eslint . --ext .vue,.js,.ts --fix",
+    "lint:check": "eslint . --ext .vue,.js,.ts",
+    "format": "prettier --write \"**/*.{js,ts,vue,json,md,css,scss,html}\"",
+    "format:check": "prettier --check \"**/*.{js,ts,vue,json,md,css,scss,html}\"",
+    "check": "pnpm lint:check && pnpm format:check && pnpm test:coverage",
+    "fix": "pnpm lint && pnpm format",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs"
@@ -21,14 +26,22 @@
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
     "@css-render/vue3-ssr": "^0.15.14",
+    "@eslint/js": "^9.30.1",
     "@types/node": "^24.0.3",
     "@vitejs/plugin-vue": "^6.0.0",
+    "@vitest/coverage-v8": "3.2.4",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "dayjs": "^1.11.13",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-vue": "^10.3.0",
+    "jsdom": "^26.1.0",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.42.0",
-    "oxlint": "^1.3.0",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.0",
     "sass": "^1.89.2",
+    "typescript-eslint": "^8.35.1",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^2.1.0",
     "vitepress": "^1.6.3",
