feat(card): 新增 Loading 组件并优化 Card 组件
- 新增 Loading 组件，实现骨架屏加载效果
- 优化 Card 组件，添加 TypeScript 类型定义
- 更新项目结构，引入 Sass 变量和混入
- 添加响应式支持和暗黑主题适配
- 实现动画控制和性能优化
- 新增单元测试和视觉回归测试

--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,13 +1,29 @@
 {
   "name": "@easy-components-vue/card",
   "version": "0.0.1",
+  "description": "@easy-components-vue/card",
   "private": true,
-  "main": "./src/index.ts",
-  "module": "./src/index.ts",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "types": "es/index.d.ts",
+  "scripts": {
+    "build": "father build",
+    "dev": "vite serve examples"
+  },
   "peerDependencies": {
     "vue": "^3.0.0",
     "naive-ui": "^2.0.0"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "@vicons/antd": "^0.13.0",
+    "sass": "^1.89.2",
+    "classnames": "^2.3.2",
+    "lodash-es": "^4.17.21",
+    "@vueuse/core": "^13.4.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.4",
+    "vite": "^4.3.9",
+    "@vitejs/plugin-vue": "^4.2.3"
+  }
 }
